Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -38,15 +38,15 @@
    "source": [
     "Double Click HERE to edit this markdown cell and write answers.\n",
     "\n",
-    "Numbers:\n Numbers are ",
+    "Numbers: Numbers are integers used in python that can be added, subtracted, ddivided and multiplied.\n",
     "\n",
-    "Strings:\n",
+    "Strings: strings store text or variables. They are immutable.\n",
     "\n",
-    "Lists:\n",
+    "Lists: Lists are used to store multiple objects in one variable. Lists are mutable.\n",
     "\n",
-    "Tuples:\n",
+    "Tuples: A tuples is like a list, but ordered and unchagable.\n",
     "\n",
-    "Dictionaries:\n"
+    "Dictionaries:Dictionaries are mutable like lists and allow you to create value paris.\n"
    ]
   },
   {
